--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "dependencies": {
     "git-commit-msg-linter": "^5.0.8"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2",
+    "typescript": "^5.7.2"
   }
 }
